button mobile share fix bottom

--- a/assets/css/section_main.css
+++ b/assets/css/section_main.css
@@ -378,7 +378,7 @@
 .main_share{
   /*height: 45px;*/
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
   left: 0;
   right: 0;
   width: 100%;  
